[package]
name = "archiver"
version = "0.2.0"
edition = "2021"
description = "RAG implementation with langchain-rust"
repository = "https://github.com/lukemilby/archiver"
readme = "README.md"
license = "Apache-2.0"
license-file = "LICENSE.txt"
keywords = ["langchain", "llm", "RAG", "surrealdb"]
categories = ["command-line-utilities", "LLM", "Langchain"]

[dependencies]
anyhow = "1.0.86"
async-recursion = "1.1.1"
clap = { version = "4.5.7", features = ["derive"] }
color-print = "0.3.6"
futures-util = "0.3.30"
langchain-rust = { version = "4.2.0", features = ["ollama", "ollama-rs", "qdrant", "qdrant-client", "surrealdb"] }
ollama-rs = { version = "0.2.0", features = ["stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
surrealdb = { version = "1.5.3", features = ["kv-mem"] }
tokio = { version = "1.38.0", features = ["full"] }
